5275: Adjust to use PartitonsBuilder for testing